GearsetPOC/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Customer_satisfaction_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_satisfaction_number__c</fullName>
    <description>Customer satisfaction field to create average value in reporting</description>
    <formula>IF(ISPICKVAL (Customer_Satisfaction__c,&#39;5&#39;),5,
IF(ISPICKVAL (Customer_Satisfaction__c,&#39;4&#39;),4,
IF(ISPICKVAL (Customer_Satisfaction__c,&#39;3&#39;),3,
IF(ISPICKVAL (Customer_Satisfaction__c,&#39;2&#39;),2,
IF(ISPICKVAL (Customer_Satisfaction__c,&#39;1&#39;),1,
IF(ISPICKVAL (Customer_Satisfaction__c,&#39;0&#39;),null,null))))))</formula>
    <label>Customer satisfaction number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>