GearsetPOC/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <formula>SurveyTaker__r.Language_of_Survey_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>