GearsetPOC/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Reason_Code_Used__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Used__c</fullName>
    <formula>SurveyTaker__r.Case__r.Reason_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code Used</label>
    <type>Text</type>
</CustomField>