GearsetPOC/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Survey_Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Survey_Taken_By__c</fullName>
    <formula>SurveyTaker__r.Contact__r.FirstName + &quot; &quot; + SurveyTaker__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Taken By</label>
    <type>Text</type>
</CustomField>