GearsetPOC/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Survey_Taken_For__c.field-meta.xml
<CustomField>
    <fullName>Survey_Taken_For__c</fullName>
    <formula>SurveyTaker__r.User__r.FirstName + &quot; &quot; + SurveyTaker__r.User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Taken For</label>
    <type>Text</type>
</CustomField>