GearsetPOC/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Transcript_Number__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Number__c</fullName>
    <formula>SurveyTaker__r.Live_Chat_Transcript__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transcript Number</label>
    <type>Text</type>
</CustomField>